[gd_scene load_steps=6 format=3 uid="uid://dsc738sk6q3i5"]

[ext_resource type="Theme" uid="uid://4xs2hn1w2or8" path="res://FlashCardTheme.tres" id="1_0pdxg"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_k07xd"]
[ext_resource type="Theme" uid="uid://d3pis5jvba6vf" path="res://GreenButton.tres" id="2_endrr"]
[ext_resource type="Theme" uid="uid://cta3fyluiaeg0" path="res://OrangeButton.tres" id="3_wa3o6"]

[sub_resource type="Theme" id="Theme_ri2bp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
top_level = true
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.047
anchor_top = 0.108
anchor_right = 0.966
anchor_bottom = 0.951
offset_left = -54.144
offset_top = -69.984
offset_right = 32.168
offset_bottom = 28.752
theme = SubResource("Theme_ri2bp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]

[node name="Edit" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "                                                                                                                                                                                                                   "

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("2_endrr")
theme_override_font_sizes/font_size = 19
text = "Create New Deck"
script = ExtResource("1_k07xd")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
columns = 4

[node name="Deck1" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "Calc Exam 1
Lvl1"
autowrap_mode = 2
script = ExtResource("1_k07xd")

[node name="Deck2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "OS
Lvl 2"
autowrap_mode = 3
script = ExtResource("1_k07xd")

[node name="Deck3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "Theroetical
Lvl 1"
autowrap_mode = 3
script = ExtResource("1_k07xd")

[node name="Deck4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "History
Lvl 0"
autowrap_mode = 3
icon_alignment = 1
script = ExtResource("1_k07xd")

[node name="Deck5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "Comms
Lvl 2"
autowrap_mode = 3
icon_alignment = 1
script = ExtResource("1_k07xd")

[node name="Deck6" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
theme = ExtResource("1_0pdxg")
text = "Algebra
Lvl 3"
icon_alignment = 1
script = ExtResource("1_k07xd")

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
text = "                                                                                                                      "

[node name="EButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme = ExtResource("3_wa3o6")
text = "Edit Decks"
script = ExtResource("1_k07xd")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck1" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck2" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck3" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck4" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_4_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck5" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_5_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/GridContainer/Deck6" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_deck_6_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer/EButton" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/Button" method="_on_edit_button_pressed"]
