[gd_scene load_steps=8 format=3 uid="uid://dsc738sk6q3i5"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_ts7yt"]
[ext_resource type="Theme" uid="uid://d3pis5jvba6vf" path="res://Assets/Themes/GreenButton.tres" id="2_6c7lq"]
[ext_resource type="PackedScene" uid="uid://b545iy5qcvnn" path="res://Scenes/DeckButton.tscn" id="3_4h7ni"]
[ext_resource type="Theme" uid="uid://4xs2hn1w2or8" path="res://Assets/Themes/FlashCardTheme.tres" id="3_vfhj2"]
[ext_resource type="Theme" uid="uid://cta3fyluiaeg0" path="res://Assets/Themes/OrangeButton.tres" id="4_1gt6r"]
[ext_resource type="Script" path="res://scripts/button_hover_size_changer.gd" id="4_st3fq"]

[sub_resource type="Theme" id="Theme_ri2bp"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ts7yt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ri2bp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MenuBar" type="MenuBar" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="File" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]

[node name="Edit" type="PopupMenu" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/MenuBar"]
auto_translate_mode = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreateDeckButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme = ExtResource("2_6c7lq")
theme_override_font_sizes/font_size = 19
text = "Create New Deck"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 550)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 17
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 17
theme_override_constants/margin_bottom = 17

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="Deck1" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer" instance=ExtResource("3_4h7ni")]
visible = false
layout_mode = 2

[node name="Deck2" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vfhj2")
text = "OS
Lvl 2"
autowrap_mode = 3
script = ExtResource("4_st3fq")

[node name="Deck3" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vfhj2")
text = "Theroetical
Lvl 1"
autowrap_mode = 3
script = ExtResource("4_st3fq")

[node name="Deck4" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vfhj2")
text = "History
Lvl 0"
autowrap_mode = 3
icon_alignment = 1
script = ExtResource("4_st3fq")

[node name="Deck5" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vfhj2")
text = "Comms
Lvl 2"
autowrap_mode = 3
icon_alignment = 1
script = ExtResource("4_st3fq")

[node name="Deck6" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer"]
visible = false
custom_minimum_size = Vector2(250, 160)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_vfhj2")
text = "Algebra
Lvl 3"
icon_alignment = 1
script = ExtResource("4_st3fq")

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
alignment = 1

[node name="StudyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme = ExtResource("4_1gt6r")
text = "Study"

[node name="EditButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
theme = ExtResource("4_1gt6r")
text = "Edit"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 4

[node name="EditPlayerButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("2_6c7lq")
text = "Edit Player"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/CreateDeckButton" to="." method="_on_create_deck_button_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck2" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck2" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck2" method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck2" to="." method="_on_deck_2_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck3" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck3" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck3" method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck3" to="." method="_on_deck_3_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck4" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck4" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck4" method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck4" to="." method="_on_deck_4_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck5" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck5" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck5" method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck5" to="." method="_on_deck_5_pressed"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck6" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck6" to="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck6" method="_on_mouse_exited"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer/HFlowContainer/Deck6" to="." method="_on_deck_6_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer/StudyButton" to="." method="_study_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer/EditPlayerButton" to="." method="_on_edit_player_button_pressed"]
